<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The CyanogenMod Project

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     version 3 as published by the Free Software Foundation.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Torch</string>
    <string name="about_title">About</string>
    <string name="about_close">Close</string>

    <string name="description">This program manipulates the camera LED.\n</string>
    <string name="warning">Warning: Leaving the LED on for a long time might overheat it.\n\nFull brightness &#8220;always on&#8221; has been tested running for &#189; hr, but there is the risk this could damage the LED.\n</string>
    <string name="license">Original code from Nexus One Torch by Ben Buxton, released under the GPL, v3.\nhttp://n1torch.googlecode.com/\n\nThanks to David Prieto for new UI design.\n\nModified for CyanogenMod by Steve Kondik.\n\n</string>
    <string name="warning_label">Warning</string>
    <string name="brightwarn">Full brightness has been tested successfully for &#189; hour of operation, but got quite hot, and started flickering (temporarily) at 45 mins. Long term effects are unknown.\n\nThis is not supported on the widget yet.\n\nClick &#8220;Accept&#8221; if you want to use it at your own risk.</string>
    <string name="brightwarn_negative">No thanks</string>
    <string name="brightwarn_accept">Accept</string>

    <string name="label_high">High brightness</string>
    <string name="label_strobe">Strobe</string>
    <string name="label_frequency">Frequency: (slide to change)</string>

    <string name="widget_options">General options</string>
    <string name="setting_widget_bright">Bright widget</string>
    <string name="setting_widget_strobe">Strobe flash</string>
    <string name="setting_frequency_title">Strobe frequency</string>
    <string name="setting_frequency_dialog">Frequency</string>
    <string name="setting_frequency_hz" translatable="false"> Hz</string>
    <string name="setting_add_widget">Add widget</string>

    <string name="not_torch_title">Torch on</string>
    <string name="not_torch_toggle">Turn torch off</string>
</resources>
