<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The CyanogenMod Project

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     version 3 as published by the Free Software Foundation.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">  

    <PreferenceCategory
        android:title="@string/widget_options">

            <CheckBoxPreference
                android:key="widget_bright"
                android:title="@string/setting_widget_bright"
                android:defaultValue="false" />

            <CheckBoxPreference
                android:key="widget_strobe"
                android:title="@string/setting_widget_strobe"
                android:defaultValue="false" />    

                    <net.cactii.flash2.SeekBarPreference 
                        android:key="widget_strobe_freq"
                        android:title="@string/setting_frequency_title" />

    </PreferenceCategory>

</PreferenceScreen>  
